test/files/pos/tcpoly_subst.scala
object test {
  def make[m[x], b]: m[b] = sys.error("foo")
  val lst: List[Int] = make[List, Int]
}
